# mcpar-land.github.io

./: .prettierrc  404.html  CNAME  Cargo.toml  Gemfile  README.md  _config.yml  dev.sh  feed.xml  index.html  robots.txt  styles.css
.github/workflows/: publish-pages.yml  rust.yml
2020/09/07/: teaching-myself-rust-baduk-and-bevy.html
2020/09/18/: ios-14-widget-cat-facts.html
2020/09/20/: teaching-myself-rust-parsing-some-math.html
_layouts/: default.html  home.html  page.html  post.html
_posts/: 2020-03-26-gouge-a-discord-slash-commands-library.md  2020-09-07-teaching-myself-rust-baduk-and-bevy.md  2020-09-18-ios-14-widget-cat-facts.md  2020-09-20-teaching-myself-rust-parsing-some-math.md  2021-01-20-bevy-fly-camera.md  2021-01-26-truchet-patterns.md  2021-03-30-welcome-to-jekyll.md
_sass/: _base.scss  _fonts.scss  _index.scss  _vars.scss
_sass/pages/: home.scss  page.scss  post.scss
assets/css/: main.css  main.css.map  main.scss
posts/: 2020-01-01_worgy.md  2020-03-26_gouge.md  2020-09-07_rust_baduk.md  2020-09-20_rust_math.md  2021-01-20_bevy-fly-camera.md  2021-01-26_truchet_patterns.md  2022-03-01_woo_waa.md  2023-07-15_hello_world.md  2023-07-16_hi_again.md  2023-07-16_new_personal_website.md  2023-07-28_download_site.md  2023-08-22_tags.md  2023-10-08_estimated_content_length.md  2024-01-01_trimming_dependencies.md  2024-02-24_bash_is_silly.md  2024-10-21_bsky.md
src/: blog.rs  error.rs  main.rs  page_builder.rs  plaintext.rs  post.rs  rss.rs  tags.rs  util.rs
src/parsers/: combinators.rs  date.rs  error.rs  frontmatter.rs
(+4 files in other folders)
