[package]
name = "mcpar-land-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
highlight-pulldown = "0.2.2"
maud = "0.25.0"
pulldown-cmark = "0.9.3"
rss = { version = "2.0.4", features = ["chrono", "validation"] }
syntect = "5.0.0"
zip = "0.5.13"
zip-extensions = "0.6.1"
